--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -275,135 +275,11 @@
             <span class="toggle-icon">{{ showDisposition ? '▼' : '▶' }}</span>
             Disposition tactique
           </h4>
+        </div> 
+        <div *ngIf="showDisposition">
+          <app-disposition-tactique></app-disposition-tactique>
         </div>
-        
-        <div class="disposition-content" *ngIf="showDisposition">
-          <div class="terrain">
-            <div class="equipe equipe1">
-              <h5 class="team-title-1">{{ selectedMatch.equipe1 }}</h5>
-              <div class="formation">
-                <!-- Attaquant -->
-                <div class="player-position attaquant" (click)="selectPosition(1, 'attaquant')">
-                  <div class="player-dot" [class.selected]="selectedPosition?.team === 1 && selectedPosition?.position === 'attaquant'">
-                    <span class="position-name">AT</span>
-                    <span class="separator" *ngIf="getPlayerForPosition(1, 'attaquant')">-</span>
-                    <span class="player-name">{{ getPlayerForPosition(1, 'attaquant') }}</span>
-                  </div>
-                </div>
-                <!-- Milieux -->
-                <div class="player-position milieu-offensif" (click)="selectPosition(1, 'milieu-offensif')">
-                  <div class="player-dot" [class.selected]="selectedPosition?.team === 1 && selectedPosition?.position === 'milieu-offensif'">
-                    <span class="position-name">MO</span>
-                    <span class="player-name">{{ getPlayerForPosition(1, 'milieu-offensif') }}</span>
-                  </div>
-                </div>
-                <div class="player-position milieu-gauche" (click)="selectPosition(1, 'milieu-gauche')">
-                  <div class="player-dot" [class.selected]="selectedPosition?.team === 1 && selectedPosition?.position === 'milieu-gauche'">
-                    <span class="position-name">MG</span>
-                    <span class="player-name">{{ getPlayerForPosition(1, 'milieu-gauche') }}</span>
-                  </div>
-                </div>
-                <div class="player-position milieu-droit" (click)="selectPosition(1, 'milieu-droit')">
-                  <div class="player-dot" [class.selected]="selectedPosition?.team === 1 && selectedPosition?.position === 'milieu-droit'">
-                    <span class="position-name">MD</span>
-                    <span class="player-name">{{ getPlayerForPosition(1, 'milieu-droit') }}</span>
-                  </div>
-                </div>
-                <!-- Défenseurs -->
-                <div class="player-position defenseur-central" (click)="selectPosition(1, 'defenseur-central')">
-                  <div class="player-dot" [class.selected]="selectedPosition?.team === 1 && selectedPosition?.position === 'defenseur-central'">
-                    <span class="position-name">DC</span>
-                    <span class="player-name">{{ getPlayerForPosition(1, 'defenseur-central') }}</span>
-                  </div>
-                </div>
-                <div class="player-position defenseur-gauche" (click)="selectPosition(1, 'defenseur-gauche')">
-                  <div class="player-dot" [class.selected]="selectedPosition?.team === 1 && selectedPosition?.position === 'defenseur-gauche'">
-                    <span class="position-name">DG</span>
-                    <span class="player-name">{{ getPlayerForPosition(1, 'defenseur-gauche') }}</span>
-                  </div>
-                </div>
-                <div class="player-position defenseur-droit" (click)="selectPosition(1, 'defenseur-droit')">
-                  <div class="player-dot" [class.selected]="selectedPosition?.team === 1 && selectedPosition?.position === 'defenseur-droit'">
-                    <span class="position-name">DD</span>
-                    <span class="player-name">{{ getPlayerForPosition(1, 'defenseur-droit') }}</span>
-                  </div>
-                </div>
-                <!-- Gardien -->
-                <div class="player-position gardien" (click)="selectPosition(1, 'gardien')">
-                  <div class="player-dot" [class.selected]="selectedPosition?.team === 1 && selectedPosition?.position === 'gardien'">
-                    <span class="position-name">G</span>
-                    <span class="player-name">{{ getPlayerForPosition(1, 'gardien') }}</span>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="equipe equipe2">
-              <h5 class="team-title-2">{{ selectedMatch.equipe2 }}</h5>
-              <div class="formation">
-                <!-- Attaquant -->
-                <div class="player-position attaquant" (click)="selectPosition(2, 'attaquant')">
-                  <div class="player-dot" [class.selected]="selectedPosition?.team === 2 && selectedPosition?.position === 'attaquant'">
-                    <span class="position-name">AT</span>
-                    <span class="player-name">{{ getPlayerForPosition(2, 'attaquant') }}</span>
-                  </div>
-                </div>
-                <!-- Milieux -->
-                <div class="player-position milieu-offensif" (click)="selectPosition(2, 'milieu-offensif')">
-                  <div class="player-dot" [class.selected]="selectedPosition?.team === 2 && selectedPosition?.position === 'milieu-offensif'">
-                    <span class="position-name">MO</span>
-                    <span class="player-name">{{ getPlayerForPosition(2, 'milieu-offensif') }}</span>
-                  </div>
-                </div>
-                <div class="player-position milieu-gauche" (click)="selectPosition(2, 'milieu-gauche')">
-                  <div class="player-dot" [class.selected]="selectedPosition?.team === 2 && selectedPosition?.position === 'milieu-gauche'">
-                    <span class="position-name">MG</span>
-                    <span class="player-name">{{ getPlayerForPosition(2, 'milieu-gauche') }}</span>
-                  </div>
-                </div>
-                <div class="player-position milieu-droit" (click)="selectPosition(2, 'milieu-droit')">
-                  <div class="player-dot" [class.selected]="selectedPosition?.team === 2 && selectedPosition?.position === 'milieu-droit'">
-                    <span class="position-name">MD</span>
-                    <span class="player-name">{{ getPlayerForPosition(2, 'milieu-droit') }}</span>
-                  </div>
-                </div>
-                <!-- Défenseurs -->
-                <div class="player-position defenseur-central" (click)="selectPosition(2, 'defenseur-central')">
-                  <div class="player-dot" [class.selected]="selectedPosition?.team === 2 && selectedPosition?.position === 'defenseur-central'">
-                    <span class="position-name">DC</span>
-                    <span class="player-name">{{ getPlayerForPosition(2, 'defenseur-central') }}</span>
-                  </div>
-                </div>
-                <div class="player-position defenseur-gauche" (click)="selectPosition(2, 'defenseur-gauche')">
-                  <div class="player-dot" [class.selected]="selectedPosition?.team === 2 && selectedPosition?.position === 'defenseur-gauche'">
-                    <span class="position-name">DG</span>
-                    <span class="player-name">{{ getPlayerForPosition(2, 'defenseur-gauche') }}</span>
-                  </div>
-                </div>
-                <div class="player-position defenseur-droit" (click)="selectPosition(2, 'defenseur-droit')">
-                  <div class="player-dot" [class.selected]="selectedPosition?.team === 2 && selectedPosition?.position === 'defenseur-droit'">
-                    <span class="position-name">DD</span>
-                    <span class="player-name">{{ getPlayerForPosition(2, 'defenseur-droit') }}</span>
-                  </div>
-                </div>
-                <!-- Gardien -->
-                <div class="player-position gardien" (click)="selectPosition(2, 'gardien')">
-                  <div class="player-dot" [class.selected]="selectedPosition?.team === 2 && selectedPosition?.position === 'gardien'">
-                    <span class="position-name">G</span>
-                    <span class="player-name">{{ getPlayerForPosition(2, 'gardien') }}</span>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          
-          <div class="disposition-info">
-            <p class="text-muted">
-              Dispositif double losange (1-3-3-1) préconisé pour le jeu à 8.
-            </p>
-          </div>
-        </div>
-      </div>
+    </div>
 
       <!-- Modifier le sélecteur de joueur -->
       <div class="player-selector" *ngIf="selectedPosition && selectedMatch">
@@ -448,7 +324,7 @@
   <div *ngIf="showDispositionModal && selectedMatch" class="disposition-modal">
     <div class="disposition-modal-content">
       <button class="close-button" (click)="closeDispositionModal()">×</button>
-      <h3>Disposition tactique</h3>
+      <h3>Disposition tactiqueX</h3>
       
       <div class="disposition-content">
         <div class="terrain">
