--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -330,8 +330,12 @@
   <div *ngIf="showDispositionModal && selectedMatch" class="disposition-modal">
     <div class="disposition-modal-content">
       <button class="close-button" (click)="closeDispositionModal()">×</button>
-      <h3>Disposition tactiqueX</h3>
+      <h3>Disposition tactique</h3>
       
+      <button class="btn btn-outline-primary mb-3" (click)="toggleDefendersAndMidfielders()">
+        {{ showDefendersAndMidfielders ? 'Afficher Jeu à 5' : 'Afficher Jeu à 8' }}
+      </button>
+
       <div class="disposition-content">
         <div class="terrain">
           <div class="equipe equipe1">
@@ -346,12 +350,14 @@
                 </div>
               </div>
               <!-- Milieux -->
+              <div *ngIf="showDefendersAndMidfielders">
               <div class="player-position milieu-offensif" (click)="selectPosition(1, 'milieu-offensif')">
                 <div class="player-dot" [class.selected]="selectedPosition?.team === 1 && selectedPosition?.position === 'milieu-offensif'">
                   <span class="position-name">MO</span>
                   <span class="separator" *ngIf="getPlayerForPosition(1, 'milieu-offensif')">-</span>
                   <span class="player-name">{{ getPlayerForPosition(1, 'milieu-offensif') }}</span>
                 </div>
+              </div>
               </div>
               <div class="player-position milieu-gauche" (click)="selectPosition(1, 'milieu-gauche')">
                 <div class="player-dot" [class.selected]="selectedPosition?.team === 1 && selectedPosition?.position === 'milieu-gauche'">
@@ -372,17 +378,21 @@
                   <span class="player-name">{{ getPlayerForPosition(1, 'defenseur-central') }}</span>
                 </div>
               </div>
+              <div *ngIf="showDefendersAndMidfielders">
               <div class="player-position defenseur-gauche" (click)="selectPosition(1, 'defenseur-gauche')">
                 <div class="player-dot" [class.selected]="selectedPosition?.team === 1 && selectedPosition?.position === 'defenseur-gauche'">
                   <span class="position-name">DG</span>
                   <span class="player-name">{{ getPlayerForPosition(1, 'defenseur-gauche') }}</span>
                 </div>
               </div>
+              </div>
+                <div *ngIf="showDefendersAndMidfielders">
               <div class="player-position defenseur-droit" (click)="selectPosition(1, 'defenseur-droit')">
                 <div class="player-dot" [class.selected]="selectedPosition?.team === 1 && selectedPosition?.position === 'defenseur-droit'">
                   <span class="position-name">DD</span>
                   <span class="player-name">{{ getPlayerForPosition(1, 'defenseur-droit') }}</span>
                 </div>
+              </div>
               </div>
               <!-- Gardien -->
               <div class="player-position gardien" (click)="selectPosition(1, 'gardien')">
@@ -406,11 +416,13 @@
                 </div>
               </div>
               <!-- Milieux -->
+              <div *ngIf="showDefendersAndMidfielders">
               <div class="player-position milieu-offensif" (click)="selectPosition(2, 'milieu-offensif')">
                 <div class="player-dot" [class.selected]="selectedPosition?.team === 2 && selectedPosition?.position === 'milieu-offensif'">
                   <span class="position-name">MO</span>
                   <span class="player-name">{{ getPlayerForPosition(2, 'milieu-offensif') }}</span>
                 </div>
+              </div>
               </div>
               <div class="player-position milieu-gauche" (click)="selectPosition(2, 'milieu-gauche')">
                 <div class="player-dot" [class.selected]="selectedPosition?.team === 2 && selectedPosition?.position === 'milieu-gauche'">
@@ -431,17 +443,21 @@
                   <span class="player-name">{{ getPlayerForPosition(2, 'defenseur-central') }}</span>
                 </div>
               </div>
+              <div *ngIf="showDefendersAndMidfielders">
               <div class="player-position defenseur-gauche" (click)="selectPosition(2, 'defenseur-gauche')">
                 <div class="player-dot" [class.selected]="selectedPosition?.team === 2 && selectedPosition?.position === 'defenseur-gauche'">
                   <span class="position-name">DG</span>
                   <span class="player-name">{{ getPlayerForPosition(2, 'defenseur-gauche') }}</span>
                 </div>
               </div>
+              </div>
+              <div *ngIf="showDefendersAndMidfielders">
               <div class="player-position defenseur-droit" (click)="selectPosition(2, 'defenseur-droit')">
                 <div class="player-dot" [class.selected]="selectedPosition?.team === 2 && selectedPosition?.position === 'defenseur-droit'">
                   <span class="position-name">DD</span>
                   <span class="player-name">{{ getPlayerForPosition(2, 'defenseur-droit') }}</span>
                 </div>
+              </div>
               </div>
               <!-- Gardien -->
               <div class="player-position gardien" (click)="selectPosition(2, 'gardien')">
@@ -449,6 +465,8 @@
                   <span class="position-name">G</span>
                   <span class="player-name">{{ getPlayerForPosition(2, 'gardien') }}</span>
                 </div>
+              </div>
+              <div *ngIf="showDefendersAndMidfielders">
               </div>
             </div>
           </div>
