--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#" style="font-weight: bold; font-size: 1rem; color: #668da6;">Encodez vos résultats sportifs !</a>
+    <a class="navbar-brand" href="#">Matchs de Football</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -21,4 +21,4 @@
       </ul>
     </div>
   </div>
-</nav>
+</nav> 
