--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -18,6 +18,9 @@
         <li class="nav-item">
           <a class="nav-link" href="#">Statistiques</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Outils</a>
+        </li>
       </ul>
     </div>
   </div>
