--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -7,16 +7,17 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Accueil</a>
+          <a class="nav-link active" aria-current="page" routerLink="/">Accueil</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Matchs</a>
+          <a class="nav-link" routerLink="/equipes" routerLinkActive="active-link">
+            Équipes</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Équipes</a>
+          <a class="nav-link" routerLink="/matchs">Matchs</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Statistiques</a>
+          <a class="nav-link" routerLink="/statistiques">Statistiques</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Outils</a>
