--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -156,6 +156,7 @@
                       <ng-container *ngFor="let minute of buteur.minutes; let i = index">
                         <span *ngIf="i > 0 && i % 5 === 0"><br></span> <!-- Line break after every 5 minutes -->
                         {{minute}}'<span *ngIf="i < buteur.minutes.length - 1">,</span>
+                        <span *ngIf="buteur.assist" class="assist-info">(Assist: {{buteur.assist}})</span>
                       </ng-container>
                     </span>
                   </div>
@@ -170,6 +171,7 @@
                       <ng-container *ngFor="let minute of buteur.minutes; let i = index">
                         <span *ngIf="i > 0 && i % 5 === 0"><br></span> <!-- Line break after every 5 minutes -->
                         {{minute}}'<span *ngIf="i < buteur.minutes.length - 1">,</span>
+                        <span *ngIf="buteur.assist" class="assist-info">(Assist: {{buteur.assist}})</span>
                       </ng-container>
                     </span>
                   </div>
@@ -251,6 +253,16 @@
                       <option [value]="2">{{ selectedMatch.equipe2 }}</option>
                     </select>
                   </div>
+                  <div class="col-md-12">
+                    <label class="form-label small">Assist (optionnel)</label>
+                    <select class="form-select" formControlName="assist">
+                      <option value="">Aucun assist</option>
+                      <option *ngFor="let player of getTeamPlayers(buteurForm.get('equipe')?.value)" 
+                              [value]="player">
+                        {{ player }}
+                      </option>
+                    </select>
+                  </div>
                 </div>
                 <div class="mt-2">
                   <button type="submit" 
@@ -320,7 +332,7 @@
           <div *ngFor="let buteur of selectedMatch.buteurs; let i = index" class="buteur-item">
             <div class="buteur-item d-flex justify-content-between align-items-center p-2 border rounded mb-2">
               <span class="flex-grow-1">
-                <strong>⚽ {{ buteur.nom }}</strong> ({{ buteur.minute }}') - <em>{{ buteur.equipe === 1 ? selectedMatch.equipe1 : selectedMatch.equipe2 }}</em>
+                <strong>{{ getButeurDisplay(buteur) }}</strong> - <em>{{ buteur.equipe === 1 ? selectedMatch.equipe1 : selectedMatch.equipe2 }}</em>
               </span>
               <div>
                 <button class="btn btn-sm btn-outline-primary me-2" 
@@ -422,16 +434,41 @@
   </div>
 
   <!-- Ajouter à la fin du template, juste avant la fermeture de la dernière div -->
-  <div class="goal-celebration" (click)="onSubmitMatchEdit()" *ngIf="showGoalCelebration">
+  <div class="goal-celebration" *ngIf="showGoalCelebration">
     <div class="celebration-content">
-      <div class="goal-text">BUUUUT !</div>
+      <div class="goal-text">BUUUT !</div>
       <div class="scorer-text">
         {{ lastGoalScorer }}
       </div>
       <div class="team-text">
         {{ lastGoalTeam }}
       </div>
-      <div class="emoji">⚽🎉</div>
+      <div class="emoji">⚽⚽</div>
+      
+      <!-- Compte à rebours avec points -->
+      <div class="countdown-dots">
+        <span *ngFor="let dot of [].constructor(10); let i = index" 
+              class="dot" 
+              [class.fade]="i >= remainingDots">
+          •
+        </span>
+      </div>
+      
+      <!-- Ajout du champ assist -->
+      <div class="assist-section mt-3">
+        <label class="form-label">Assist (optionnel)</label>
+        <select class="form-select" [(ngModel)]="lastGoalAssist">
+          <option value="">Aucun assist</option>
+          <option *ngFor="let player of getTeamPlayers(lastGoalTeam === selectedMatch?.equipe1 ? 1 : 2)" 
+                  [value]="player"
+                  [disabled]="player === lastGoalScorer">
+            {{ player }}
+          </option>
+        </select>
+        <button class="btn btn-primary mt-2" (click)="saveGoalWithAssist()">
+          Enregistrer
+        </button>
+      </div>
     </div>
   </div>
 
